# Funnel_Vision

./: README.md  app.py  flow_analysis.json  packages.txt  pyproject.toml  requirements.txt  scrape_results.json
.streamlit/: config.toml
src/: analyze_local.py  main.py  pdf_generator.py  report_generator.py  scraper.py
